@@ -45,6 +45,7 @@ T =					\
   testsuite/misc.pl			\
   testsuite/bug32082.sh		\
   testsuite/bug32271-1.sh		\
+  testsuite/bug32271-2.sh		\
   testsuite/cmd-l.sh			\
   testsuite/cmd-R.sh			\
   testsuite/colon-with-no-label.sh	\
