@@ -17,6 +17,9 @@ GNU sed NEWS                                    -*- outline -*-
   sed no longer adds extraneous NUL when given s/$//n command.
   [related to bug#32271, present since sed-4.0.7]
 
+  sed no longer accesses invalid memory (heap overflow) with s/$//n regexes.
+  [bug#32271, present since sed-4.3].
+
 
 * Noteworthy changes in release 4.5 (2018-03-31) [stable]
 
